# atask

./: Cargo.toml  README.md  agent.md  atask.db  github_setup_commands.sh
examples/: git_github_ops.rs
src/: db.rs  git_ops.rs  kanban.rs  lib.rs  main.rs  web.rs
templates/: kanban.html
