[package]
name = "atask"
version = "0.1.0"
edition = "2021"

[dependencies]
libsql = "0.9.20"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
# Git operations
git2 = "0.18"
# GitHub API operations
octocrab = "0.38"
# HTTP client for API calls
reqwest = { version = "0.12", features = ["json"] }
# Web server framework for Kanban board
axum = { version = "0.7", features = ["macros"] }
# Templating engine
askama = { version = "0.12", features = ["with-axum"] }
# Additional utilities
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

[dev-dependencies]
# Temporary directories for testing
tempfile = "3.8"
